cleaning up stylesheet, trying out fix for gradient on mobile

--- a/mediaQueries_update2020.css
+++ b/mediaQueries_update2020.css
@@ -1,101 +1,102 @@
 @media (max-width: 975px) {
-    h1 {
-        font-size: 4rem;
-        margin-top: 5vh;
-        letter-spacing: 0.05rem;
-      }
-
-      .header-and-image > img {
-        top: -10rem;
-        right: 0;
-        height: 300px;
+  h1 {
+      font-size: 4rem;
+      margin-top: 5vh;
+      letter-spacing: 0.05rem;
     }
+
+    .header-and-image > img {
+      top: -10rem;
+      right: 0;
+      height: 300px;
+  }
 }
 
 
 @media (max-width: 850px) {
-    .navbar {
-        padding: 15px 20px;
-    }
-    .body-content {
-        padding: 0 20px;
-    }
+  .navbar {
+      padding: 15px 20px;
+  }
+  .body-content {
+      padding: 0 20px;
+  }
+  .navbar > .logo {
+      height: 3.5rem;
+  }
+  h1 {
+    font-size: 3.5rem;
+  }
+}
 
-    .navbar > .logo {
-        height: 3.5rem;
-    }
-
-    h1 {
-      font-size: 3.5rem;
-    }
+@media (max-width: 800px) {
+  .header-and-image > img {
+    display: none;
   }
 
-  @media (max-width: 800px) {
-    .header-and-image > img {
-      display: none;
+  .small-drawing-container {
+    display: flex;
+    align-items: center;
+  }
+  .small-drawing {
+    display: block;
+    height: 125px;
+    margin-top: 3vh;
+    margin-right: 20px;
   }
 
-    .small-drawing-container {
-      display: flex;
-      align-items: center;
-    }
-    .small-drawing {
-      display: block;
-      height: 125px;
-      margin-top: 3vh;
-      margin-right: 20px;
-    }
-
-    h3 {
-      font-size: 1.2rem;
-      margin-top: 3vh;
+  h3 {
+    font-size: 1.2rem;
+    margin-top: 3vh;
   }
 
   .projects-array > .project {
     display: flex;
     flex-direction: column;
- }
+  }
 
- .projects-array {
-   grid-template-columns: 1fr 1fr;
- }
+  .projects-array {
+    grid-template-columns: 1fr 1fr;
+  }
 
- .projects-array > .project > .project-description {
-  transition: all 0.1s linear;
-  margin-top: 1rem;
-  margin-left: 0px;
+.projects-array > .project > .project-description {
+    transition: all 0.1s linear;
+    margin-top: 1rem;
+    margin-left: 0px;
+  }
 }
- 
-}
 
-  @media (max-width: 650px) {
-    h1 {
-        font-size: 2.5rem;
-        line-height: 1.75;
-      }
+@media (max-width: 650px) {
+  h1 {
+    font-size: 2.5rem;
+    line-height: 1.75;
+  }
 
-      h1 > .white-text {
-        padding: 0.5rem;
-      }
+  h1 > .white-text {
+    padding: 0.5rem;
+  }
+
+  .scribble > svg {
+    height: 20rem;
+  }
 }
 
 @media (max-width: 475px) {
-    h1 {
-        font-size: 2rem;
-      }
-      .projects-array {
-        grid-template-columns: 1fr;
-      }
+  h1 {
+    font-size: 2rem;
+  }
+  .projects-array {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-width: 390px) {
-    h1 {
-        font-size: 1.75rem;
-      }
+  h1 {
+    font-size: 1.75rem;
+  }
 }
 
 @media (max-width: 350px) {
-    h1 {
-        font-size: 1.5rem;
-      }
+  h1 {
+    font-size: 1.5rem;
+  }
 }
