--- a/style_update2020.css
+++ b/style_update2020.css
@@ -15,12 +15,14 @@ body {
     background-image: url(images/dot-grid.svg);
     width: 100%;
     min-height: 100%;
+    z-index: -10;
 }
 .gradient-background {
     position: fixed;
-    background-image: linear-gradient(0deg, #fbf8f5, #fbf8f5, transparent);
+    background-image: linear-gradient(0deg, #fbf8f5, #fbf8f5, #fbf8f500);
     width: 100%;
     min-height: 100%;
+    z-index: -1;
 }
 
 a {
@@ -63,16 +65,6 @@ a:hover {
 
 .header-and-image {
     position: relative;
-}
-
-.small-drawing {
-    display: none;
-}
-
-.header-and-image > img {
-    position: absolute;
-    top: -12rem;
-    right: 0;
 }
 
 h1 {
